[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helios"
version = "0.1.0"
description = "An Intelligent Control Plane for Serverless GPU Inference"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "statsmodels>=0.14,<0.16",
    "structlog>=24.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.72",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
